correcciones de flujo de inicio de trámite